implement click to focus