@@ -3,6 +3,8 @@ package edu.wpi.cs3733.d19.teamO.entity.pathfinding;
 import java.util.ArrayList;
 import java.util.List;
 
+import kotlin.Pair;
+
 import edu.wpi.cs3733.d19.teamO.entity.Node;
 
 
@@ -59,8 +61,8 @@ public class StepByStep {
    * @param nodes list of nodes.
    * @return list of instructions.
    */
-  public ArrayList<String> getStepByStep(List<Node> nodes) {
-    ArrayList<Coordinate> coordinates = new ArrayList<>();
+  public ArrayList<Pair<String, Node>> getStepByStep(List<Node> nodes) {
+    ArrayList<Pair<Coordinate, Node>> coordinates = new ArrayList<>();
 
     for (Node node : nodes) {
       boolean isElevator = false;
@@ -74,10 +76,10 @@ public class StepByStep {
       }
       Coordinate newCoord = new Coordinate(node.getXcoord(), node.getYcoord(),
           isElevator, isStair, node.getFloor());
-      coordinates.add(newCoord);
+      coordinates.add(new Pair<>(newCoord, node));
     }
 
-    ArrayList<String> cardinalDirections = new ArrayList<>();
+    ArrayList<Pair<String, Node>> cardinalDirections = new ArrayList<>();
 
     List<String> compass = new ArrayList<>();
     compass.add("North");
@@ -88,28 +90,31 @@ public class StepByStep {
     compass.add("South West");
     compass.add("West");
     compass.add("North West");
-    ArrayList<Double> distance = new ArrayList<>();
+    ArrayList<Pair<Double, Node>> distance = new ArrayList<>();
 
-    ArrayList<String> instructions = new ArrayList<>();
+    ArrayList<Pair<String, Node>> instructions = new ArrayList<>();
     ArrayList<String> floors = new ArrayList<>();
 
     for (int i = 0; i < coordinates.size() - 1; i++) {
-      String direction = getDirection(coordinates.get(i), coordinates.get(i + 1));
-      cardinalDirections.add(direction);
-      double diff = coordinates.get(i).getDist(coordinates.get(i + 1));
-      distance.add(diff);
-      floors.add(coordinates.get(i).getFloor());
+      String direction = getDirection(coordinates.get(i).getFirst(), coordinates.get(i + 1).getFirst());
+      cardinalDirections.add(new Pair<>(direction, coordinates.get(i).getSecond()));
+      double diff = coordinates.get(i).getFirst().getDist(coordinates.get(i + 1).getFirst());
+      distance.add(new Pair<>(diff, coordinates.get(i).getSecond()));
+      floors.add(coordinates.get(i).getFirst().getFloor());
     }
     String currFloor = nodes.get(0).getFloor();
-    instructions.add("Floor " + currFloor);
-    instructions.add("\tWalk " + cardinalDirections.get(0) + " from " + nodes.get(0).getLongName());
+    instructions.add(new Pair<>("Floor " + currFloor, nodes.get(0)));
+    instructions.add(new Pair<>(
+        "\tWalk " + cardinalDirections.get(0).getFirst() + " from " + nodes.get(0).getLongName(),
+        nodes.get(0))
+    );
     double totalDist = 0;
     String last = "other";
     String forward = "forward";
 
     for (int i = 0; i < cardinalDirections.size() - 1; i++) {
-      String current = cardinalDirections.get(i);
-      String next = cardinalDirections.get(i + 1);
+      String current = cardinalDirections.get(i).getFirst();
+      String next = cardinalDirections.get(i + 1).getFirst();
 
       int start = compass.indexOf(current);
       int end = compass.indexOf(next);
@@ -117,7 +122,9 @@ public class StepByStep {
 
 
       if (!last.equals(forward)) {
-        instructions.add("\tWalk " + Double.toString(Math.round(distance.get(i))) + " ft then");
+        instructions.add(new Pair<>(
+            "\tWalk " + Double.toString(Math.round(distance.get(i).getFirst())) + " ft then",
+            distance.get(i).getSecond()));
       }
 
       if (last.equals("Elevator") || last.equals("Stair")) {
@@ -127,7 +134,7 @@ public class StepByStep {
       if (current.equals("Elevator")) {
         instructions.remove(instructions.size() - 1);
         instructions.remove(instructions.size() - 1);
-        instructions.add("\tUse elevator");
+        instructions.add(new Pair<>("\tUse elevator", cardinalDirections.get(i).getSecond()));
 
         String nextFloor = "";
         currFloor = floors.get(i);
@@ -135,14 +142,14 @@ public class StepByStep {
           nextFloor = floors.get(i + 1);
         }
         if (!currFloor.equals(nextFloor)) {
-          instructions.add("Floor " + nextFloor);
+          instructions.add(new Pair<>("Floor " + nextFloor, cardinalDirections.get(i).getSecond()));
         }
 
         last = "Elevator";
       } else if (current.equals("Stair")) {
         instructions.remove(instructions.size() - 1);
         instructions.remove(instructions.size() - 1);
-        instructions.add("\tUse stairs");
+        instructions.add(new Pair<>("\tUse stairs", cardinalDirections.get(i).getSecond()));
 
         String nextFloor = "";
         currFloor = floors.get(i);
@@ -150,39 +157,42 @@ public class StepByStep {
           nextFloor = floors.get(i + 1);
         }
         if (!currFloor.equals(nextFloor)) {
-          instructions.add("Floor " + nextFloor);
+          instructions.add(new Pair<>("Floor " + nextFloor, cardinalDirections.get(i).getSecond()));
         }
 
         last = "Stair";
       } else if (diff == 1 || diff == -7) {
-        instructions.add("\tTake a slight right");
+        instructions.add(new Pair<>("\tTake a slight right", cardinalDirections.get(i).getSecond()));
         last = "other";
       } else if (diff == 2 || diff == -6) {
-        instructions.add("\tTake a right");
+        instructions.add(new Pair<>("\tTake a right", cardinalDirections.get(i).getSecond()));
         last = "other";
       } else if (diff == 3 || diff == -5) {
-        instructions.add("\tTake a hard right");
+        instructions.add(new Pair<>("\tTake a hard right", cardinalDirections.get(i).getSecond()));
         last = "other";
       } else if (diff == -1 || diff == 7) {
-        instructions.add("\tTake a slight left");
+        instructions.add(new Pair<>("\tTake a slight left", cardinalDirections.get(i).getSecond()));
         last = "other";
       } else if (diff == -2 || diff == 6) {
-        instructions.add("\tTake a left");
+        instructions.add(new Pair<>("\tTake a left", cardinalDirections.get(i).getSecond()));
         last = "other";
       } else if (diff == -3 || diff == 5) {
-        instructions.add("\tTake a hard left");
+        instructions.add(new Pair<>("\tTake a hard left", cardinalDirections.get(i).getSecond()));
         last = "other";
       } else if (diff == 0) {
         if (!last.equals(forward)) {
-          instructions.add("\tGo forward");
-          totalDist += Math.round(distance.get(i));
+          instructions.add(new Pair<>("\tGo forward", cardinalDirections.get(i).getSecond()));
+          totalDist += Math.round(distance.get(i).getFirst());
           last = "forward";
         }
         last = "forward";
       }
     }
 
-    instructions.add("\tArrive at " + nodes.get(nodes.size() - 1).getLongName());
+    instructions.add(new Pair<>(
+        "\tArrive at " + nodes.get(nodes.size() - 1).getLongName(),
+        nodes.get(nodes.size() - 1)
+    ));
 
     return instructions;
   }
